# confens

./: README.md  pyproject.toml  setup.py
.ipynb_checkpoints/: pyproject-checkpoint.toml
confensemble.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
confensembles/: depths.py
confensembles/.ipynb_checkpoints/: depths-checkpoint.py
conformal_ensembles/: confens.py  conformal.py
conformal_ensembles.egg-info/: SOURCES.txt  top_level.txt
conformal_ensembles/.ipynb_checkpoints/: __init__-checkpoint.py
conformal_ensembles/conformal_ensembles.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
project_scripts/: figure4_sensitivity.ipynb  figure8_projection.ipynb  pre_download_era5.ipynb  revision_quantile_error.ipynb
project_scripts/.ipynb_checkpoints/: figure6_temp_quantiles-checkpoint.ipynb  figure7_pr_quantiles-checkpoint.ipynb
scripts/: figure1_temporal_validity.ipynb  figure6_temp_quantiles.ipynb  pre_process_era5.ipynb  pre_process_tmax.ipynb  pre_train_experiments.ipynb  revision_extreme_sims.ipynb
scripts/.ipynb_checkpoints/: figure2_temporal_skill-checkpoint.ipynb  figure5_validation-checkpoint.ipynb  pre_process_pr-checkpoint.ipynb  pre_process_tas-checkpoint.ipynb  revision_extreme_sims-checkpoint.ipynb  revision_quantile_error-checkpoint.ipynb  table1_validity-checkpoint.ipynb  table2_wasserstein-checkpoint.ipynb
test/: dev.ipynb  test.ipynb
test/.ipynb_checkpoints/: dev-checkpoint.ipynb  test-checkpoint.ipynb
